--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,7 @@ dependencies {
 //    compile(name: "dialogplus-release", ext: "aar")
 //    compile(name: "slideSwitchLibrary-release", ext: "aar")
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1@aar'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:multidex:1.0.1'
 }
