--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,22 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
-
+    buildToolsVersion '23.0.0'
     defaultConfig {
         applicationId "happybaby.pics"
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion 15
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -23,11 +26,9 @@ android {
             jniLibs.srcDir 'libs'
         }
     }
-
     lintOptions {
         abortOnError false
     }
-
     packagingOptions {
         exclude '.readme'
         exclude 'LICENSE.txt'
@@ -44,12 +45,13 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
-
     dexOptions {
         incremental true
         jumboMode true
         preDexLibraries = false
         javaMaxHeapSize "2048M"
+    }
+    productFlavors {
     }
 }
 
@@ -60,6 +62,12 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+allprojects {
+    repositories {
+        mavenCentral()
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.0.1'
@@ -68,10 +76,12 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.6.1'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
-//    compile(name: "dialogplus-release", ext: "aar")
-//    compile(name: "slideSwitchLibrary-release", ext: "aar")
+    //    compile(name: "dialogplus-release", ext: "aar")
+    //    compile(name: "slideSwitchLibrary-release", ext: "aar")
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:design:23.0.1'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
